[gd_scene load_steps=8 format=2]

[ext_resource path="res://pet-icon.png" type="Texture" id=1]
[ext_resource path="res://Minigame.gd" type="Script" id=2]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://new_styleboxflat.tres" type="StyleBox" id=4]
[ext_resource path="res://new_styleboxflat_pink.tres" type="StyleBox" id=5]
[ext_resource path="res://new_styleboxflat_mint.tres" type="StyleBox" id=6]
[ext_resource path="res://Kalam/Kalam-Regular.tres" type="DynamicFont" id=7]

[node name="Minigame" type="Node2D"]
script = ExtResource( 2 )
Enemy = ExtResource( 3 )

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 310.0
margin_top = 500.0
margin_right = 410.0
margin_bottom = 550.0
custom_fonts/font = ExtResource( 7 )
text = "Score:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Node2D" parent="."]
z_index = 1

[node name="ButtonUp" type="Button" parent="Buttons"]
margin_left = 55.0
margin_right = 155.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonDown" type="Button" parent="Buttons"]
margin_left = 55.0
margin_top = 220.0
margin_right = 155.0
margin_bottom = 320.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "v"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRight" type="Button" parent="Buttons"]
margin_left = 110.0
margin_top = 110.0
margin_right = 210.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonLeft" type="Button" parent="Buttons"]
margin_top = 110.0
margin_right = 100.0
margin_bottom = 210.0
custom_fonts/font = ExtResource( 7 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PlayerHelper" type="Node2D" parent="."]

[node name="Player" type="Area2D" parent="PlayerHelper"]

[node name="Sprite" type="Sprite" parent="PlayerHelper/Player"]
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerHelper/Player"]
polygon = PoolVector2Array( -20, -1, -25, -8, -27, -22, -24, -31, -21, -38, -17, -45, -14, -48, -11, -26, -10, -16, -11, -11, -1, -13, 7, -10, 9, -8, 10, -18, 14, -26, 22, -34, 39, -42, 29, -11, 21, -2, 15, 2, 17, 7, 16, 12, 11, 18, 15, 22, 18, 34, 19, 40, 21, 45, 7, 45, -8, 42, -18, 39, -22, 33, -24, 26, -21, 20, -17, 18, -22, 11 )

[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="button_down" from="Buttons/ButtonUp" to="." method="_on_ButtonUp_button_down"]
[connection signal="button_up" from="Buttons/ButtonUp" to="." method="_on_ButtonUp_button_up"]
[connection signal="button_down" from="Buttons/ButtonDown" to="." method="_on_ButtonDown_button_down"]
[connection signal="button_up" from="Buttons/ButtonDown" to="." method="_on_ButtonDown_button_up"]
[connection signal="button_down" from="Buttons/ButtonRight" to="." method="_on_ButtonRight_button_down"]
[connection signal="button_up" from="Buttons/ButtonRight" to="." method="_on_ButtonRight_button_up"]
[connection signal="button_down" from="Buttons/ButtonLeft" to="." method="_on_ButtonLeft_button_down"]
[connection signal="button_up" from="Buttons/ButtonLeft" to="." method="_on_ButtonLeft_button_up"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="area_entered" from="PlayerHelper/Player" to="." method="_on_Player_area_entered"]
